--- a/report/trustymail_report.mustache
+++ b/report/trustymail_report.mustache
@@ -673,30 +673,37 @@ Your agency is also welcome to request additional domains/subdomains be scanned 
 If your PDF viewer supports embedded attachments, you will see a paperclip icon below for the attached file.\\
 \attachfile[appearance=false,mimetype=text/csv,icon=Paperclip,ucfilespec=trustymail\_results.csv]{trustymail_results.csv} trustymail\_results.csv : Detailed results from \texttt{trustymail} scan {\small\lbrack\href{https://github.com/dhs-ncats/trustymail}{https://github.com/dhs-ncats/trustymail}]}\\~\\
 \attachfile[appearance=false,mimetype=text/csv,icon=Paperclip,ucfilespec=dmarc\_failures.csv]{dmarc_failures.csv}
-dmarc\_failures.csv : Summarized analysis gathered from processing
-DMARC aggregate reports for your .gov domains with an \texttt{rua=} of
+dmarc\_failures.csv : Summary analysis of DMARC aggregate reports for
+your \texttt{.gov} domains with an \texttt{rua=} of
 \texttt{reports@dmarc.cyber.dhs.gov} received during the past
 week. The results are sorted by the \texttt{Count} field, in
 descending order.
 
-We recommend understanding the principles of email authentication
-shared on
-\href{https://cyber.dhs.gov/bod/18-01}{cyber.dhs.gov/bod/18-01},
-especially the section titled
-\href{https://cyber.dhs.gov/bod/18-01/#what-are-the-standards-that-enable-email-authentication}{``What
-are the standards that enable email authentication?''}
+\subsection{Understanding \texttt{dmarc\_failures.csv}}
+\label{sec:dmarcfailures}
+\emph{In order to understand what is going on in this data, we recommend reviewing the principles of email authentication on \href{https://cyber.dhs.gov/bod/18-01}{cyber.dhs.gov/bod/18-01}, especially the section titled \href{https://cyber.dhs.gov/bod/18-01/\#what-are-the-standards-that-enable-email-authentication}{``What are the standards that enable email authentication?''}}
 
-The information in \texttt{dmarc\_failures.csv} provides you with a
-list of IP addresses that were reported as sending email as your
-domain(s) but that fail a strong DMARC policy of \texttt{p=reject} (or
-would if it was in place). You should review this list, starting with
-those domains that have the highest numbers in the \texttt{Count}
-field, and assess which are authorized by your organization. Those are
-the domains you need to
+\texttt{dmarc\_failures.csv} is a summary analysis of DMARC aggregate
+reports for your \texttt{.gov} domains with an \texttt{rua=} of
+\texttt{reports@dmarc.cyber.dhs.gov} received during the past
+week. The results are sorted by the \texttt{Count} field, in
+descending order.
+
+The CSV provides you with a list of IP addresses that were reported as
+sending email as your domain(s) but that fail a strong DMARC policy of
+\texttt{p=reject}. You should review this list, starting with those
+domains that have the highest numbers in the \texttt{Count} field, and
+assess which are authorized by your organization. Those are the
+domains you need to
 \href{https://cyber.dhs.gov/bod/18-01/#spf--dkim}{authenticate} with
 e.g., SPF/DKIM, and
 \href{https://cyber.dhs.gov/bod/18-01/#alignment-and-conformance}{align}
 with DMARC.
+
+Generally speaking, we encourage you to avoid deep analysis on those
+systems that are not authorized to send mail as your domain, but
+\emph{use them as motivation} to authenticate valid mail and set a
+policy of reject for your domains.
 
 Four fields provide key details as to why a message failed
 authentication or alignment. These are (1) DKIM Alignment Result, (2)
@@ -707,10 +714,6 @@ instance:
   and DKIM Alignment Result both fail then the message doesn't pass.
 \end{itemize}
 
-Generally speaking, we encourage you to avoid deep analysis on those
-systems that are not authorized to send mail as your domain, but
-\emph{use them as motivation} to authenticate valid mail.
-
 Do note:
 \begin{itemize}
 \item The \texttt{PTR} and \texttt{ASN} fields below are not in DMARC
@@ -719,38 +722,38 @@ Do note:
 \item Because this summarized analysis covers the past week, real-time
   data in the current week may differ. For example, the DMARC policy
   at the domain could be different.
+\item The three DKIM fields may contain multiple values if there are
+  multiple DKIM headers.  A message can have multiple DKIM headers for
+  a variety of reasons, most typically when it is forwarded by a
+  mail-forwarding service like mailing lists. See
+  \href{http://dkim.org/specs/rfc4871-dkimbase.html#multiple-signatures}{RFC
+    4871, section 4.1}.
 \end{itemize}
 
-The fields in the \texttt{dmarc\_failures.csv} CSV are as
-follows. Names in the the square brackets represent the corresponding
-fields -- the elements and types -- in the raw XML of DMARC reports:
+The fields in the \texttt{dmarc\_failures.csv} CSV are as follows:
 \begin{description}
 \item[DMARC Domain] The domain where the DMARC record was found. This
   is either a) the domain in the
   \href{https://cyber.dhs.gov/bod/18-01/#alignment-and-conformance}{message-From}
   address (the email address that is represented as From: in email
   clients), or b) the organizational domain corresponding to that.
-\item[Source IP] The IP address from which emails were sent.
-\item[PTR] The DNS PTR record (if any) associated with the source IP.
-\item[ASN] The autonomous system number (ASN) associated with the
-  source IP.
-\item[Count] The number of emails that failed DMARC processing and are
-  being reported.
-\item[Policy] Applied The DMARC policy that was applied by the
-  reporter.
 \item[Override Reason] The reason (if any) that the reporter chose to
   override the DMARC policy published by the domain.
+\item[Count] The number of emails that failed DMARC processing and are
+  being reported.
+\item[Policy Applied] The DMARC policy that was applied by the
+  reporter.
 \item[DKIM Alignment Result] \hfill
   \begin{itemize}
     \item \texttt{aligned} if DKIM passed and the DKIM domain aligned
-      with that of the message-From header
+      with that of the message-From header.
     \item \texttt{unaligned} if DKIM passed but the DKIM domain did
       not align with that of the message-From header.
     \item \texttt{fail} if DKIM failed.
   \end{itemize}
 \item[DKIM Result] \hfill
   \begin{itemize}
-    \item \texttt{pass} if DKIM passed
+    \item \texttt{pass} if DKIM passed.
     \item \texttt{fail} otherwise.
   \end{itemize}
 \item[DKIM Domain] The DKIM domain. This is the domain referenced in
@@ -765,17 +768,20 @@ fields -- the elements and types -- in the raw XML of DMARC reports:
   \end{itemize}
 \item[SPF Result] \hfill
   \begin{itemize}
-    \item \texttt{pass} if SPF passed
+    \item \texttt{pass} if SPF passed.
     \item \texttt{fail} otherwise.
   \end{itemize}
 \item[SPF Domain] This is the domain listed in the
   \href{https://cyber.dhs.gov/bod/18-01/#spf--dkim}{envelope From},
   the email address asserted at the initial SMTP transaction.
+\item[Source IP] The IP address from which emails were sent.
+\item[PTR] The DNS PTR record (if any) associated with the source IP.
+\item[ASN] The autonomous system number (ASN) associated with the
+  source IP.
 \end{description}
 
-For more information about these fields, please see
+For more information about these fields, review
 \href{https://tools.ietf.org/html/rfc7489#appendix-C}{Appendix C in
-  RFC 7489}, Domain-based Message Authentication, Reporting, and
-Conformance (DMARC).
+  RFC 7489}.
 
 \end{document}
