Update links from old style, add latest revision
I guarantee that I've LaTeX'd this wrong somewhere.

--- a/report/trustymail_report.mustache
+++ b/report/trustymail_report.mustache
@@ -364,7 +364,7 @@ opacity=0.04
 \label{sec:executive summary}
 Email underpins interactions between government agencies and enables direct correspondence with US citizens, immigrants, and international users. However, email was not built with security in mind, and without supplementary configuration or architecture it lacks important properties of trusted communication. Several email authentication technologies work in harmony to enable a recipient to detect and mitigate fraudulent email, particularly SPF and DMARC.
 
-This weekly report, created by the National Cybersecurity Assessments and Technical Services (NCATS) team inside the Department of Homeland Security's National Cybersecurity and Communications Integration Center (NCCIC), is intended to assist your agency to comply with the email security aspects of \href{https://cyber.dhs.gov}{Binding Operational Directive (BOD) 18-01}. Implementation guidance can be found at \href{https://cyber.dhs.gov/guide}{https://cyber.dhs.gov/guide}.
+This weekly report, created by the National Cybersecurity Assessments and Technical Services (NCATS) team inside the Department of Homeland Security's National Cybersecurity and Communications Integration Center (NCCIC), is intended to assist your agency to comply with the email security aspects of \href{https://cyber.dhs.gov}{Binding Operational Directive (BOD) 18-01}. Implementation guidance can be found at \href{https://cyber.dhs.gov/bod/18-01}{https://cyber.dhs.gov/bod/18-01/#compliance-guide}.
 
 \vspace*{-3mm}
 \addcontentsline{toc}{subsection}{Overview} % Adds a subsection to toc
@@ -405,7 +405,7 @@ Of \textit{\numprint{<<base_domain_plus_smtp_subdomain_count>>} hostnames (secon
   \item \textbf{\numprint{<<supports_starttls_count>>}} hostnames (<<supports_starttls_percentage>>\%) support STARTTLS (or have no mail-sending hosts)
   \item \textbf{\numprint{<<valid_spf_count>>}} hostnames (<<valid_spf_percentage>>\%) have a valid SPF record
   \item \textbf{\numprint{<<has_no_weak_crypto_count>>}} hostnames (<<has_no_weak_crypto_percentage>>\%) do not support SSLv2, SSLv3, 3DES, or RC4
-  \item \textbf{\numprint{<<bod_1801_compliant_count>>}} hostnames (<<bod_1801_compliant_percentage>>\%) are \href{https://cyber.dhs.gov}{BOD 18-01} Compliant for email security
+  \item \textbf{\numprint{<<bod_1801_compliant_count>>}} hostnames (<<bod_1801_compliant_percentage>>\%) are \href{https://cyber.dhs.gov/bod/18-01}{BOD 18-01} Compliant for email security
 \end{itemize}
 
 \vspace*{-4mm}
@@ -534,7 +534,7 @@ Whether any weak cryptographic protocols (Secure Sockets Layer (SSL)v2, SSLv3) o
 \vspace*{-6mm}
 \textit{Values: \checkmark (compliant), \xmark \ (not compliant), N/A (hostname does not resolve in DNS)}\\~\\
 
-Whether a hostname meets all of the following criteria for being compliant with \href{https://cyber.dhs.gov}{BOD 18-01} for email security:
+Whether a hostname meets all of the following criteria for being compliant with \href{https://cyber.dhs.gov/bod/18-01}{BOD 18-01} for email security:
   \begin{itemize}[topsep=-6pt, itemsep=0pt]
     \item Uses STARTTLS on all SMTP servers (or has no SMTP servers)
     \item Has a valid SPF record
@@ -592,13 +592,13 @@ Email authentication can impede the delivery of phishing emails that attempt to 
   \item internal government users who may rely on information that appears to come, e.g., from an important colleague.
 \end{itemize}
 
-There are three predominant forms of email authentication technology: \href{https://cyber.dhs.gov/intro/#spf--dkim}{SPF}, \href{https://cyber.dhs.gov/intro/#spf--dkim}{DKIM}, and \href{https://cyber.dhs.gov/intro/#dmarc}{DMARC}. Conceptually, each operate similarly:
+There are three predominant forms of email authentication technology: \href{https://cyber.dhs.gov/bod/18-01/#spf--dkim}{SPF}, \href{https://cyber.dhs.gov/bod/18-01/#spf--dkim}{DKIM}, and \href{https://cyber.dhs.gov/bod/18-01/#dmarc}{DMARC}. Conceptually, each operate similarly:
 \begin{enumerate}[topsep=-6pt, itemsep=0pt]
   \item When an email arrives at a recipient mail server, it queries the sending domain's DNS to check for relevant email authentication records.
   \item If email authentication records are found, the server evaluates the email it received against the email authentication records and makes a determination: deliver it, deliver it but mark it as questionable, or discard it altogether.
 \end{enumerate}
 
-See \href{http://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-177.pdf#page=37}{SP 800-177, section 4} for a detailed technical description. For additional information, please see \href{https://cyber.dhs.gov/intro}{https://cyber.dhs.gov/intro}.\\~\\~\\
+See \href{http://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-177.pdf#page=37}{SP 800-177, section 4} for a detailed technical description. For additional information, please see \href{https://cyber.dhs.gov/bod/18-01/#introduction-to-email-authentication}{https://cyber.dhs.gov/bod/18-01/#introduction-to-email-authentication}.\\~\\~\\
 
 \vspace*{-3mm}
 \phantomsection % links this section from toc
@@ -606,7 +606,7 @@ See \href{http://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-177.p
 \subsection*{What should my organization do?}
 \vspace*{-3mm}
 
-For implementation guidance, please see \href{https://cyber.dhs.gov/guide}{https://cyber.dhs.gov/guide}.\\~\\~\\
+For implementation guidance, please see \href{https://cyber.dhs.gov/bod/18-01/#compliance-guide}{https://cyber.dhs.gov/bod/18-01/#compliance-guide}.\\~\\~\\
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -619,7 +619,7 @@ For implementation guidance, please see \href{https://cyber.dhs.gov/guide}{https
 \subsection*{Resources}
 \vspace*{-3mm}
 
-Please see \href{https://cyber.dhs.gov/resources}{https://cyber.dhs.gov/resources} for helpful information.\\~\\~\\
+Please see \href{https://cyber.dhs.gov/bod/18-01/#resources}{https://cyber.dhs.gov/bod/18-01/#resources} for helpful information.\\~\\~\\
 
 \vspace*{-3mm}
 \phantomsection % links this section from toc
@@ -653,7 +653,7 @@ and saved to a database using
 \href{https://github.com/dhs-ncats/dmarc-import}{an open source tool
 created by the NCATS team}.  This database is then queried at the time
 of report generation in order to populate the report with DMARC
-failure data.
+failure data. See dmarc_failures.csv for more information.
 
 Note that DMARC failures can occur for the following reasons:
 \begin{itemize}[topsep=-6pt, itemsep=0pt]
@@ -683,38 +683,25 @@ descending order.
 \label{sec:dmarcfailures}
 \emph{In order to understand what is going on in this data, we recommend reviewing the principles of email authentication on \href{https://cyber.dhs.gov/bod/18-01}{cyber.dhs.gov/bod/18-01}, especially the section titled \href{https://cyber.dhs.gov/bod/18-01/\#what-are-the-standards-that-enable-email-authentication}{``What are the standards that enable email authentication?''}}
 
-\texttt{dmarc\_failures.csv} is a summary analysis of DMARC aggregate
+\texttt{dmarc\_failures.csv} is summary analysis of DMARC aggregate
 reports for your \texttt{.gov} domains with an \texttt{rua=} of
 \texttt{reports@dmarc.cyber.dhs.gov} received during the past
 week. The results are sorted by the \texttt{Count} field, in
 descending order.
 
-The CSV provides you with a list of IP addresses that were reported as
-sending email as your domain(s) but that fail a strong DMARC policy of
-\texttt{p=reject}. You should review this list, starting with those
-domains that have the highest numbers in the \texttt{Count} field, and
-assess which are authorized by your organization. Those are the
-domains you need to
-\href{https://cyber.dhs.gov/bod/18-01/#spf--dkim}{authenticate} with
-e.g., SPF/DKIM, and
-\href{https://cyber.dhs.gov/bod/18-01/#alignment-and-conformance}{align}
-with DMARC.
+In order to satisfy DMARC filtering, at least one email authentication mechanism (SPF, DKIM) must:
+\begin{enumerate}[topsep=-6pt, itemsep=0pt]
+  \item “pass” their \href{https://cyber.dhs.gov/bod/18-01/#spf--dkim}{authentication checks}, and 
+  \item produce that result based on the SPF or DKIM domain being in “\href{https://cyber.dhs.gov/bod/18-01/#alignment-and-conformance{alignment}”. Alignment is when the authenticated domain matches the domain in the message-From address (\texttt{DMARC Domain}, below). 
+\end{enumerate}
 
-Generally speaking, we encourage you to avoid deep analysis on those
-systems that are not authorized to send mail as your domain, but
-\emph{use them as motivation} to authenticate valid mail and set a
-policy of reject for your domains.
+The CSV provides you with a list of IP addresses that were reported as sending email as your domain(s) but that fail these conditions. 
 
-Four fields provide key details as to why a message failed
-authentication or alignment. These are (1) DKIM Alignment Result, (2)
-DKIM Result, (3) SPF Alignment Result, and (4) SPF Result. For
-instance:
-\begin{itemize}
-\item If SPF Result and DKIM Result both pass but SPF Alignment Result
-  and DKIM Alignment Result both fail then the message doesn't pass.
-\end{itemize}
+Your goal should be to review this list and determine \emph{which messages are legitimate} even though they fail authentication. We suggest you start with those domains that have the highest numbers in the \texttt{Count} field, since they are seeing the most errors, and investigate which have actually been authorized by your organization. Those are the domains you need to authenticate with SPF/DKIM and align with DMARC. 
 
-Do note:
+Generally speaking, we encourage you to avoid deep analysis on those systems that are not authorized to send mail as your domain, but \emph{use them as motivation} to authenticate valid mail and set a policy of reject for your domains.
+
+Take note:
 \begin{itemize}
 \item The \texttt{PTR} and \texttt{ASN} fields below are not in DMARC
   reports, but are pieces of information, based on your DMARC report
