Add missing brace

--- a/report/trustymail_report.mustache
+++ b/report/trustymail_report.mustache
@@ -703,7 +703,7 @@ In order to satisfy DMARC filtering, at least one email authentication mechanism
   \href{https://cyber.dhs.gov/bod/18-01/#spf--dkim}{authentication
   checks}, and
   \item produce that result based on the SPF or DKIM domain being in
-  ``\href{https://cyber.dhs.gov/bod/18-01/#alignment-and-conformance{alignment}''. Alignment
+  ``\href{https://cyber.dhs.gov/bod/18-01/#alignment-and-conformance}{alignment}''. Alignment
   is when the authenticated domain matches the domain in the
   message-From address (\texttt{DMARC Domain}, below).
 \end{enumerate}
