--- a/report/trustymail_report.mustache
+++ b/report/trustymail_report.mustache
@@ -428,7 +428,16 @@ Of \textit{\numprint{<<base_domain_plus_smtp_subdomain_count>>} hostnames (secon
 \begin{landscape}
 \section{Results}
 \label{sec:results}
-The following table shows STARTTLS, SPF, DMARC, and weak cryptography data for <<&agency>> hostnames. Hostnames which are not ``live" (i.e., requests to the DNS return an NXDOMAIN answer) are disregarded and not within scope, except in rare cases where a non-live domain has one or more live subdomains.  \textbf{This table shows all second-level domains and those subdomains with a DMARC record set directly.} (DMARC records set at the base domain impact subdomains in a ``wildcard-like" fashion, unless there is a DMARC record set at the subdomain directly.) \textbf{Subdomains that do not support SMTP are excluded from the table below.}\\~\\
+The following table presents observed STARTTLS, SPF, DMARC, and weak cryptography data for <<&agency>> hostnames. This table only shows data that meets the following critieria:
+\begin{itemize}[topsep=-6pt, itemsep=0pt]
+  \item hostnames that are ``live" in DNS
+  \item second-level domains
+  \item subdomains with a DMARC record set directly
+  \item subdomains for which the second-level domain does not have a valid DMARC record.
+  \item subdomains that ``support SMTP"
+\end{itemize}
+
+The table is optimized around showing those domains that are not currently protected by DMARC.\\~\\
 
 \textbf{Note:} The results in this report differ from the results on Pulse (\href{https://pulse.cio.gov}{https://pulse.cio.gov}). This difference is due to the scope that each service covers. Pulse data focuses solely on web security, where this report focuses on email security.\\~\\
 
